clang/test/BSC/Negative/Ownership/Borrow/borrow_expr_freeze/member_func_call_freeze/member_func_call_freeze.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void use_mut(int *_Borrow p) {}
void use_immut(const int *_Borrow p) {}
void free(void *);
int* malloc_int(int value);
struct A {
    int *p;
};

int * _Borrow struct A::get_p_mut(This *_Borrow this) {
    return &_Mut *(this->p);
}

const int *_Borrow struct A::get_p_immut(This *_Borrow this) {
    return &_Const *(this->p);
}

void struct A::free_p(This *_Borrow this) {
    free((int *)this->p);
}

void test1() {
    struct A a = { .p = malloc_int(5) };
    *a.p = 6;
    int *_Borrow q1 = a.get_p_mut(); // expected-note {{first mut borrow occurs here}}
                                    // expected-note@-1 {{first mut borrow occurs here}}
    const int *_Borrow q2 = a.get_p_immut(); // expected-error {{cannot borrow `a` as mutable more than once at a time}}
    a.free_p(); // expected-error {{cannot borrow `a` as mutable more than once at a time}}
    int tmp2 = *q2;
    int tmp1 = *q1;
}

void test2() {
    struct A a = { .p = malloc_int(5) };
    *a.p = 6;
    int *_Borrow q = a.get_p_mut(); // expected-note {{first mut borrow occurs here}}
    a.free_p(); // expected-error {{cannot borrow `a` as mutable more than once at a time}}
    int tmp = *q;
}